Updating dataset: Components Updating dataset: DMCompany Updating dataset: Productdetails Updating dataset: erptodatalake

--- a/synapsepoc/dataset/Components.json
+++ b/synapsepoc/dataset/Components.json
@@ -10,7 +10,7 @@
 		"typeProperties": {
 			"location": {
 				"type": "AzureBlobStorageLocation",
-				"fileName": "component",
+				"fileName": "component.csv",
 				"folderPath": "erptodata",
 				"container": "milindgmodi"
 			},
